@@ -25,6 +25,7 @@ version <next>:
 - vaguedenoiser filter
 - added threads option per filter instance
 - weave filter
+- gblur filter
 
 
 version 3.1:
